--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Lato:ital@1&family=Roboto+Condensed:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="icon" href="favicon.ico">
   <title>Resume</title>
 </head>
 <body>
@@ -48,7 +48,10 @@
 		</section>
 		<section class="main_data_container">
 			<div class="experience_container">
-				<h3>Опыт работы</h3>
+				<div class="title_container">
+					<img src="img/work.png">
+					<h3>ОПЫТ РАБОТЫ</h3>
+				</div>
 				<div class="experience_item">
 					<div class="date">08.2012 - н.в.</div>
 					<div class="organization">АО ММЗ</div>
@@ -70,7 +73,10 @@
 				</div>
 			</div>
 			<div class="education_container">
-				<h3>Образование</h3>
+				<div class="title_container">
+					<img src="img/education.png">
+					<h3>ОБРАЗОВАНИЕ</h3>
+				</div>
 				<div class="education_item">
 					<div class="date">2022</div>
 					<div class="education_place">Институт программных систем</div>
@@ -93,7 +99,10 @@
 				</div>
 			</div>
 			<div class="tools_container">
-				<h3>Инструменты и технологии</h3>
+				<div class="title_container">
+					<img src="img/tools.png">
+					<h3>ИНСТРУМЕНТЫ И ТЕХНОЛОГИИ</h3>
+				</div>
 				<div class="tools_item">
 					Начальный уровень JavaScript (работа с DOM-элементами, массивами, коллекциями, функции, коллбеки и замыкания, работа с объектами). 
 					pine script (присал простые стратегии и индикаторы). 
@@ -102,7 +111,10 @@
 				</div>
 			</div>
 			<div class="interests_container">
-				<h3>О себе</h3>
+				<div class="title_container">
+					<img src="img/hobby.png">
+					<h3>О СЕБЕ</h3>
+				</div>
 				<div class="interests_item">
 					Люблю гулять, путешествовать, заниматься спортом (ролики, волейбол, единоборства, сноуборд, велосипед, шахматы). 
 					Немного играю на гитаре и даже иногда пою. Стараюсь читать на русском и английском. Люблю учиться и стремлюсь расширять кругозор. 
